# delulu-smash

./: .gitignore  README.md  git-blame-ignore-revs  gitconfig  pre-commit-config.yaml  pyproject.toml  resources.md  tech.md  todo.md
.github/workflows/: deploy.yml
docs/: myst.yml  noteable_players.md  stages.md
docs/local/: .gitignore
docs/matchups/: zss.md
docs/scratch/: todo.txt
pkgs/ssbu/: __init__.py  util.py
pkgs/ssbu/data/: char.csv
pkgs/ssbu/data/raw/: raw_ko_kill_pct.csv  readme.md
pkgs/ssbu/logging/: __init__.py  util.py
scratch/: todo.txt
tools/: todo.md
